overflow glitches resolved

--- a/src/app/dago/content-carousel/content-carousel.component.css
+++ b/src/app/dago/content-carousel/content-carousel.component.css
@@ -118,7 +118,7 @@
 }
 
 .carousel-item.active{
-  z-index: 2;
+  z-index: 6;
 }
 
 /*.carousel-control {
